...
					onPress={closeSheet}
				/>
				<Button
					text={t('common.delete')}
					size="large"
					variant="secondary"
					testID="DeletePubkyConfirmButton"
					onPress={onDelete}
				/>
			</View>
		</Sheet>
	);
};
...
