...
import PubkyProfile from '../PubkyProfile.tsx';
import { Scan, Share, Shield, Trash } from '../../icons/index.ts';
import { canPubkyAuthorize } from '../../store/selectors/pubkySelectors.ts';

interface PubkyDetailCardProps {
	index: number;
	pubky: string;
	pubkyData: PubkyData;
	onQRPress: () => Promise<void>;
	onDelete: () => void;
	onBackup: () => void;
}

...
					)}
					<Button
						style={styles.actionButton}
						text={t('common.delete')}
						variant="dark"
						icon={deleteIcon}
						testID="PubkyDetailDeleteButton"
						onPress={onDelete}
					/>
				</View>
			</View>
		);
	},
...
