...
		<View style={styles.listFooterContainer}>
			<Button
				style={styles.listFooterButton}
				text={t('home.addPubky')}
				size="large"
				icon={<Plus />}
				testID="AddPubkyButton"
				onPress={() => showSheet('add-pubky')}
			/>
		</View>
	);
});

...
