...

				<View style={styles.buttonContainer}>
					<Button
						style={styles.button}
						text={t('onboarding.getStarted')}
						size="large"
						testID="OnboardingContinueButton"
						onPress={navigateHome}
					/>
				</View>
			</View>

			<SafeAreaInset edge="bottom" />
...
