...
					</View>

					<Button
						style={styles.button}
						text={t('common.continue')}
						size="large"
						testID="TermsContinueButton"
						onPress={onContinue}
					/>

					<SafeAreaInset edge="bottom" />
				</ThemedView>
			</View>
...
