...

const TermsOfUseContent = (): ReactElement => {
	const { t } = useTranslation();

	return (
		<>
			<Text5Xl style={styles.title} testID="TermsTitle">
				{t('terms.title')}
			</Text5Xl>
			<View style={styles.subtitleContainer}>
				<TextBaseM style={[styles.subtitle, styles.subtitleHeading]}>
					PUBKY RING TERMS AND CONDITIONS
				</TextBaseM>
...
