...
				borderRadius={16}
				dashWidth={2}
				dashGap={2}
			>
				<TextInput
					style={styles.input}
					testID="InviteCodeInput"
					value={inviteCode}
					onChangeText={handleInviteCodeChange}
					onSubmitEditing={handleContinue}
					placeholder="XXXX-XXXX-XXXX"
					placeholderTextColor="rgba(255, 255, 255, 0.32)"
					autoCapitalize="characters"
...
					icon={<Gift size={20} />}
					onPress={handleNeedInvite}
				/>
			</View>

			{error ? (
				<BodySText testID="InviteCodeErrorText" colorName="danger" style={styles.errorText}>
					{error}
				</BodySText>
			) : null}

			<View style={styles.footer}>
				<Button
...
