...
				/>
				<Button
					style={styles.button}
					text={t('addPubky.newPubkyButton')}
					size="large"
					icon={<Pencil />}
					testID="AddPubkyManual"
					onPress={onCreatePubky}
				/>
				<Button
					style={styles.button}
					text={t('addPubky.importPubkyButton')}
					size="large"
...
