appId: ${APP_ID}
name: onboarding
---
- launchApp:
    clearState: true
- assertVisible:
    id: TermsTitle
- swipe:
    start: 50%, 60%
    end: 50%, 18%
    duration: 700
- swipe:
    start: 50%, 60%
    end: 50%, 18%
    duration: 700
- assertNotVisible:
    id: TermsTitle
- tapOn:
    id: TermsContinueButton
- extendedWaitUntil:
    visible:
      id: OnboardingContinueButton
    timeout: 10000
- tapOn:
    id: OnboardingContinueButton
- extendedWaitUntil:
    visible:
      id: AddPubkyButton
    timeout: 10000
