appId: ${APP_ID}
---
- assertVisible:
    id: TermsTitle
- tapOn:
    id: TermsContinueButton
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: OnboardingContinueButton
    timeout: 10000
- tapOn:
    id: OnboardingContinueButton
- extendedWaitUntil:
    visible:
      id: AddPubkyButton
    timeout: 10000
