appId: ${APP_ID}
---
- tapOn:
    id: AddPubkyButton
- tapOn:
    id: NewPubkyButton
- tapOn:
    id: NewPubkyContinueButton
