appId: ${APP_ID}
name: create-pubky-custom-homeserver
env:
  STAGING_HOMESERVER: ufibwbmed6jeq9k4p583go95wofakh9fwpp4k734trq79pd9u1uy
  PUBKY_NAME: Staging Test Pubky
---
- runScript: ../scripts/request-invite-code.js
- launchApp:
    clearState: true
- runFlow: ../shared/onboarding.yaml
- runFlow: ../shared/start-new-pubky.yaml
- tapOn:
    id: HomeserverCustomOption
- assertVisible:
    id: HomeserverCustomRadioInner
- assertNotVisible:
    id: HomeserverDefaultRadioInner
- tapOn:
    id: HomeserverContinueButton
- extendedWaitUntil:
    visible:
      id: EditPubkyNameInput
    timeout: 30000
- tapOn:
    id: EditPubkyNameInput
- inputText: ${PUBKY_NAME}
- assertVisible: ${PUBKY_NAME}
- tapOn:
    id: EditPubkyInviteCodeInput
- inputText: ${output.INVITE_CODE_WITHOUT_HYPHENS}
- runFlow:
    file: ../shared/clearInputText.yaml
    env:
      INPUT_ID: EditPubkyHomeserverInput
- setClipboard: ${STAGING_HOMESERVER}
- pasteText
- tapOn:
    id: EditPubkyNameLabel # hide keyboard
- tapOn:
    id: EditPubkySaveButton
- assertVisible:
    id: PubkyBox-StagingTestPubky-0
