appId: ${APP_ID}
name: create-pubky-default-homeserver
---
- launchApp:
    clearState: true
- runFlow: ../shared/onboarding.yaml
- runFlow: ../shared/create-pubky.yaml
- tapOn:
    id: AddPubkyReviewContinue
- assertVisible:
    id: HomeserverDefaultRadioInner
- assertNotVisible:
    id: HomeserverCustomRadioInner
- tapOn:
    id: HomeserverContinueButton
- tapOn:
    id: InviteCodeInput
- setClipboard: ABCD1234EFGH
- pasteText
- assertVisible: ABCD-1234-EFGH
- pressKey: Enter
- extendedWaitUntil:
    visible:
      id: InviteCodeErrorText
    timeout: 120000
